src/index.css
@tailwind components;
@tailwind utilities;

body {
  @apply text-gray-200 m-0 bg-[#F7F7F8] dark:bg-[rgba(45,47,51,1)] overflow-x-hidden;
}

h1, h2, h3, h4, h5, h6 {
  @apply border-0 border-b border-gray-600 border-solid;
}

h1, h2, h3, h4, h5, h6, p, li{
  @apply text-black dark:text-white;
}

pre{
  @apply font-medium text-lg leading-6 whitespace-pre-wrap bg-gray-800 text-white p-4 rounded-lg overflow-x-auto;
  word-wrap: break-word;
}

button{
  @apply w-full flex p-3 items-center gap-3 rounded-md bg-transparent hover:bg-gray-500/10 transition-colors duration-200 text-white cursor-pointer text-sm mb-2 flex-shrink-0 border-0;
}

